# spop

./: README.md  dane  spop.cabal
src/: Dao.hs  Main.hs  Strings.hs  Types.hs  Ui.hs  Utils.hs
