name: spop
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: spop2013L
data-dir: ""
 
executable spop
    build-depends: MissingH -any, QuickCheck -any, base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Dao Types Strings Ui Utils
 
test-suite test-spop
    build-depends: MissingH -any, QuickCheck -any, base -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src